# otus-cpp-basics_hw-4

./: Ball.cpp  Ball.hpp  CMakeLists.txt  Painter.cpp  Painter.hpp  Physics.cpp  Physics.hpp  README.md  World.cpp  World.hpp  star.cpp  star.hpp
black_box/: Application.cpp  PainterImpl.cpp  PainterImpl.hpp
